# DisplayGraphicsCodeGenerator

./: .gitignore  CMakeLists.txt  README.md
DisplayGraphicsCodeGenerator/: CMakeLists.txt  dgcgmain.cpp  dgcgmain.h  dgcgmain.ui  main.cpp
DisplayGraphicsCodeGeneratorApp/: CMakeLists.txt  dgcgmain.cpp  dgcgmain.h  dgcgmain.ui
DisplayGraphicsCodeGeneratorLib/: CMakeLists.txt  DisplayGraphicsCodeGeneratorLib_global.h  Image.h  ImageConverter.h  ImageLoader.h  ImageMonoBinary.cpp  ImageMonoBinary.h  ImageMonoBinaryCSerializer.cpp  ImageMonoBinaryCSerializer.h  ImageSerializer.h  ImageUtils.cpp  ImageUtils.h  Pixel.h  QImage8BGrayToImageMonoBinary.cpp  QImage8BGrayToImageMonoBinary.h  QtImageLoader.cpp  QtImageLoader.h  displaygraphicscodegeneratorlib.cpp  displaygraphicscodegeneratorlib.h  image2dgrayscale4bits.cpp  image2dgrayscale4bits.h  pixelunsigned4bits.cpp  pixelunsigned4bits.h  point2d_sizet.cpp  point2d_sizet.h  qtimageloader.cpp  qtimageloader.h  qtto2dgrayscale4bitsimageconverter.cpp  qtto2dgrayscale4bitsimageconverter.h
UnitTests/: CMakeLists.txt  tst_QtImage2D8BitsGrayScaleToDGCGImage2DMono.cpp  tst_imageloader.cpp
Windows/config/: config.xml
assets/: test_image2_75x64.pgm
assets/img/: test_image_16x64.pgm  test_image_64x55.pgm
assets/templates/code/c/: image.c  image.h
